Set fixed width to prevent size clipping

--- a/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/Footer/style.scss
+++ b/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/Footer/style.scss
@@ -1,7 +1,7 @@
 @import '../../style';
 
 .footer {
-  width: 80vw;
+  width: 2048px;
 }
 
 .drumheller-section-footer {
