--- a/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/SectionFour/style.scss
+++ b/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/SectionFour/style.scss
@@ -1,7 +1,7 @@
 @import '../../style';
 
 .drumheller-section.four {
-  width: 200vw;
+  width: 5120px;
 
   .drumheller-section-four {
     position: absolute;
