--- a/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/SectionOne/style.scss
+++ b/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/components/SectionOne/style.scss
@@ -3,7 +3,7 @@
 .drumheller-section-one {
   @extend .drumheller-section;
   padding-left: 200px;
-  width: 100vw;
+  width: 2560px;
   
   .drumheller-textblock {
     position: absolute;
