--- a/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/style.scss
+++ b/web-experiments/src/pages/ProjectList/DrumhellerConcept/components/Section/style.scss
@@ -42,7 +42,7 @@
   position: relative;
   padding-right: 100px;
   height: 100vh;
-  width: 100vw;
+  width: 2560px;
   box-sizing: border-box;
   display: flex;
   background-color: #F3E2E4;
